modificacion flujo caja